@@ -19,7 +19,6 @@ MANIFEST
 MANIFEST.SKIP
 Makefile.PL
 perl-Glib.spec.in
-PkgConfig.pm
 README
 README.api-changes
 Subclass.pm
