@@ -4,22 +4,48 @@
 
 use 5.008;
 use ExtUtils::MakeMaker;
-use Cwd;
 use File::Spec;
+use Cwd;
 
-# dependent modules will be able to 'use' these normally; for us, they
-# aren't installed yet, so we have to cheat.
-require 'PkgConfig.pm';
+# minimum required version of dependancies we need to build
+our %build_reqs = (
+	'perl-ExtUtils-Depends'   => '0.1',
+	'perl-ExtUtils-PkgConfig' => '0.1',
+	'Glib'                    => '2.0.0',
+);
+
+# minimum required version of dependancies we need to run
+our %runtime_reqs = (
+	'Glib'	=> undef,
+);
+
+# Writing a fake Makefile ensures that CPAN will pick up the correct
+# dependencies and install them.
+unless (eval "use ExtUtils::Depends;"
+           . "use ExtUtils::PkgConfig;"
+           . "1") {
+   warn "$@\n";
+   WriteMakefile(
+         PREREQ_FATAL => 1,
+         PREREQ_PM    => {
+            ExtUtils::Depends::   => $build_reqs{'perl-ExtUtils-Depends'},
+            ExtUtils::PkgConfig:: => $build_reqs{'perl-ExtUtils-PkgConfig'},
+         },
+   );
+   exit 1; # not reached
+}
 
 mkdir 'build', 0777;
 
-%glibcfg = Glib::PkgConfig->find ('gobject-2.0');
+%glibcfg = ExtUtils::PkgConfig->find ('gobject-2.0');
+
+$runtime_reqs{Glib} = $glibcfg{modversion};
 
 # optional thread-safety
 $nothreads = grep /disable[-_]threadsafe/i, @ARGV;
 if (!$nothreads) {
 	eval {
-		%gthreadcfg = Glib::PkgConfig->find ('gthread-2.0');
+		%gthreadcfg = ExtUtils::PkgConfig->find ('gthread-2.0');
 	};
 	$nothreads = 1 if $@;
 }
@@ -35,11 +61,10 @@ if ($nothreads) {
 }
 
 
-
-if ($glib = eval { require ExtUtils::Depends; ExtUtils::Depends->new ('Glib') }) {
-   # this is the order in which we want the api docs from the XS files to
-   # appear in Glib::xsapi
-   @xs_files = qw(
+my $glib = ExtUtils::Depends->new ('Glib');
+# this is the order in which we want the api docs from the XS files to
+# appear in Glib::xsapi
+@xs_files = qw(
 	Glib.xs
 	GLog.xs
 	GType.xs
@@ -51,35 +76,32 @@ if ($glib = eval { require ExtUtils::Depends; ExtUtils::Depends->new ('Glib') })
 	GMainLoop.xs
 	GIOChannel.xs
 	GParamSpec.xs
-   );
-   %pm_files = (
-	'Glib.pm'         => '$(INST_LIBDIR)/Glib.pm',
-	'PkgConfig.pm'    => '$(INST_LIBDIR)/Glib/PkgConfig.pm',
-	'Subclass.pm'     => '$(INST_LIBDIR)/Glib/Object/Subclass.pm',
-	'devel.pod'       => '$(INST_LIBDIR)/Glib/devel.pod',
-	'build/xsapi.pod' => '$(INST_LIBDIR)/Glib/xsapi.pod',
-   );
-   %pod_files = (
-      'Glib.pm'         => '$(INST_MAN3DIR)/Glib.$(MAN3EXT)',
-      'PkgConfig.pm'    => '$(INST_MAN3DIR)/Glib::PkgConfig.$(MAN3EXT)',
-      'Subclass.pm'     => '$(INST_MAN3DIR)/Glib::Object::Subclass.$(MAN3EXT)',
-      'devel.pod'       => '$(INST_MAN3DIR)/Glib::devel.$(MAN3EXT)',
-      'build/xsapi.pod' => '$(INST_MAN3DIR)/Glib::xsapi.$(MAN3EXT)',
-   );
+);
+%pm_files = (
+     'Glib.pm'         => '$(INST_LIBDIR)/Glib.pm',
+     'Subclass.pm'     => '$(INST_LIBDIR)/Glib/Object/Subclass.pm',
+     'devel.pod'       => '$(INST_LIBDIR)/Glib/devel.pod',
+     'build/xsapi.pod' => '$(INST_LIBDIR)/Glib/xsapi.pod',
+);
+%pod_files = (
+   'Glib.pm'         => '$(INST_MAN3DIR)/Glib.$(MAN3EXT)',
+   'Subclass.pm'     => '$(INST_MAN3DIR)/Glib::Object::Subclass.$(MAN3EXT)',
+   'devel.pod'       => '$(INST_MAN3DIR)/Glib::devel.$(MAN3EXT)',
+   'build/xsapi.pod' => '$(INST_MAN3DIR)/Glib::xsapi.$(MAN3EXT)',
+);
 
-   # add -I. and -I./build to the include path so we can find our own files.
-   # this will be inherited by dependant modules, so they can find their
-   # generated files.
-   $glib->set_inc ($glibcfg{cflags} . $gthreadcfg{cflags} . ' -I. ');
-   $glib->set_libs ($glibcfg{libs} . $gthreadcfg{libs});
-   my $cwd = cwd();
-   $glib->add_typemaps (map {File::Spec->catfile($cwd,$_)} 'typemap');
-   $glib->add_headers ('"gperl.h"');
-   $glib->install (qw(gperl.h));
-   $glib->save_config ('build/IFiles.pm');
-   $glib->add_pm (%pm_files);
-   $glib->add_xs (@xs_files);
-}
+# add -I. and -I./build to the include path so we can find our own files.
+# this will be inherited by dependant modules, so they can find their
+# generated files.
+$glib->set_inc ($glibcfg{cflags} . $gthreadcfg{cflags} . ' -I. ');
+$glib->set_libs ($glibcfg{libs} . $gthreadcfg{libs});
+my $cwd = cwd();
+$glib->add_typemaps (map {File::Spec->catfile($cwd,$_)} 'typemap');
+$glib->add_headers ('"gperl.h"');
+$glib->install (qw(gperl.h));
+$glib->save_config ('build/IFiles.pm');
+$glib->add_pm (%pm_files);
+$glib->add_xs (@xs_files);
 
 # exports list needed for win32, unused on others
 require 'Glib.exports';
@@ -89,8 +111,9 @@ WriteMakefile(
     VERSION_FROM	=> 'Glib.pm', # finds $VERSION
     PREREQ_FATAL	=> 1,
     PREREQ_PM		=> {
-                             ExtUtils::Depends => 0.1,
-                           },
+        ExtUtils::Depends::   => $build_reqs{'perl-ExtUtils-Depends'},
+        ExtUtils::PkgConfig:: => $build_reqs{'perl-ExtUtils-PkgConfig'},
+    },
     ABSTRACT_FROM	=> 'Glib.pm', # retrieve abstract from module
     XSPROTOARG		=> '-noprototypes',
     MAN3PODS		=> $glib ? \%pod_files : {},
@@ -108,18 +131,35 @@ sub postamble {
 		      rpms/SPECS rpms/SRPMS};
 	my $cwd = getcwd();
 
+	my %subs = (
+		'VERSION' => '$(VERSION)',
+		'SOURCE' => '$(DISTNAME)-$(VERSION).tar.gz',
+		'GLIB_RUN' => $runtime_reqs{'Glib'},
+		'GLIB' => $build_reqs{'Glib'},
+		'PERL_EXTUTILS_DEPENDS' => 
+			$build_reqs{'perl-ExtUtils-Depends'},
+		'PERL_EXTUTILS_PKGCONFIG' => 
+			$build_reqs{'perl-ExtUtils-PkgConfig'},
+	);
+	
+	my $substitute = '$(PERL) -npe \''.join('; ', map {
+			"s/\\\@$_\\\@/$subs{$_}/g";
+		} keys %subs).'\'';
+
 	return "
 build/xsapi.pod: @main::xs_files xsapi.pod.head xsapi.pod.foot apidoc.pl
 	$^X apidoc.pl xsapi.pod.head xsapi.pod.foot @main::xs_files > \$@
 
 realclean ::
-	-rm -Rf build perl-\$(DISTNAME).spec
+	-\$(RM_RF) build perl-\$(DISTNAME).spec
 
 rpms/:
 	-mkdir @dirs
 
+SUBSTITUTE=$substitute
+
 perl-\$(DISTNAME).spec: perl-\$(DISTNAME).spec.in \$(VERSION_FROM) Makefile
-	sed -e \"s/\@VERSION\@/\$(VERSION)/g\" -e \"s/\@SOURCE\@/\$(DISTNAME)-\$(VERSION).tar.gz/g\" \$< > \$@
+	\$(SUBSTITUTE) \$+ > \$@
 
 dist-rpms: Makefile dist perl-\$(DISTNAME).spec rpms/
 	cp \$(DISTNAME)-\$(VERSION).tar.gz rpms/SOURCES/
